updated meta page

--- a/projects/meta.html
+++ b/projects/meta.html
@@ -36,6 +36,26 @@
 		<p>
 		So, I watched a few youtube videos and played around with some online tutorials to create this site over my junior summer. I wrote basic HTML/CSS and included a bit of Javascript for the Design Thinking page. Once I had a general template, I wrote out documentation and description for the projects I’ve designed. The hardest part honestly was getting myself to stop - I would start coding/writing after dinner and suddenly realize that it's 3AM! 
 		</p>
+		<h2>Version 1: Basic Site</h2>
+		<img src="../assets/reginayanP1.png" style= "width:90%;">
+		<p>In this bare-bones version, I learned the basics of HTML/CSS and navigating GitHub</p>
+		<br>
+		<h2>Version 2: Adding Projects</h2>
+		<img src="../assets/reginayanP2.png" style= "width:90%;">
+		<p>In the second iteration, I added all my project images/documentation and worked more on styling the text.</p>
+		<br>
+		<h2>Version 3: Responsiveness</h2>
+		<img src="../assets/reginayanP3.png" style= "width:90%;">
+		<p>I then focused on responsiveness by learning how to use media queries and implemented some Javascript in the nav bar (turning the project sections into a hamburger menu)</p>
+		<br>
+		<h2>Version 4: Styling the site</h2>
+		<img src="../assets/reginayanP4.png" style= "width:90%;">
+		<p>With helpful input from friends, I added a hero image and changed up the fonts to make the site more interesting and the project descriptions more readable (different font for section headers vs. text paragraphs)</p>
+		<br>
+		<h2>Version 5: Enhancing User Flow</h2>
+		<img src="../assets/reginayanP5.png" style= "width:90%;">
+		<p>I received a lot of helpful feedback, one of which was the fact it's hard to navigate from one project to another without always going back to the main section page. I then incorporated a "More Projects" section at the bottom of each project to enhance the user flow and get rid of the "now what do I do" feeling.</p>
+		<br>
 		<h2>Takeaways</h2>
 		<p>
 		I am starting to delve deeper into the UI/UX field, and I'm so excited to explore even more. I've spoken with a few web engineers during my internship at Cogo Labs to ask for feedback and advice on moving forward. I will be learning React next and working more closely with developers… we'll see what happens!
