--- a/projects/meta.html
+++ b/projects/meta.html
@@ -27,7 +27,7 @@
 <div class="box_content">
 		<h1>Personal Website</h1>
 		<div class="proj_img">
-			<img src="../assets/projecttile-45.png" style= "height:100%;">
+			<img src="../assets/projecttile-45.png" style= "width:60%;">
 		</div>
 
 		<p>
