--- a/misc.html
+++ b/misc.html
@@ -12,10 +12,10 @@
 	<header class="container">
 		<a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a>
 		<div class="topnav" id="myTopnav">
-			<a href="uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
-			<a href="illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
-			<a href="branding.html" class="unselected">Branding</a><a class="hide">__</a>
-			<a href="misc.html" class="active">Modeling</a><a class="hide">__</a>
+			<a href="uiux.html" class="unselected">UI/UX</a>
+			<a href="illustration.html" class="unselected">Illustration</a>
+			<a href="branding.html" class="unselected">Branding</a>
+			<a href="misc.html" class="active">Modeling</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
