--- a/branding.html
+++ b/branding.html
@@ -24,6 +24,7 @@
 
 <div style="padding-top: 150px;"></div>
 <div class="container_featuredProjects">
+	<a href="projects/opo.html"><img class="tile" src="assets/OPOlogos_final_BW_OPO.png"></a>
 	<a href="projects/ef.html"><img class="tile" src="assets/projecttile-40.png"></a>
 	<a href="projects/dmc.html"><img class="tile" src="assets/projecttile-29.png"></a>
 	<a href="projects/sdc.html"><img class="tile" src="assets/projecttile-31.png"></a>
