--- a/projects/opo.html
+++ b/projects/opo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Branding | Big Green Dreams</title>
+	<title>Regina | Branding | Outdoor Programs Office</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,20 +25,21 @@
 <div class="top_padding"></div>	
 <div class="content">
 	<div class="box_content">
-		<h1>Big Green Dreams Stickers</h1>
+		<h1>Outdoor Programs Office Logos</h1>
 		<div class="proj_img">
-			<img src="../assets/gg1.jpg" style= "height:100%; width:100%;">
-
-			<img src="../assets/gg2.jpg" style= "height:145%; width:100%;">
+			<img src="../assets/OPOlogos_final_BW_OPO.png" style= "width:45%;">
+			<img src="../assets/OPOlogos_final_BW_Cabin Rentals.png" style= "width:45%;">
+			<img src="../assets/OPOlogos_final_BW_DOR.png" style= "width:45%;">
+			<img src="../assets/OPOlogos_final_BW_Ropes Course.png" style= "width:45%;">
 		</div>
 			<p>
-			I created these stickers my freshman spring for Big Green Dreams, a campaign launched by Dartmouth Sustainability’s EcoReps to promote sustainability and "green dreams" for the College. 
+			The Outdoor Programs Office, or OPO, is a Dartmouth administrative group that aims to facilitate outdoor opportunities for the Dartmouth community. OPO asked me to create logos for its various programs in time for Fall of 2018. 
 			</p>
 			<p>
 			<h2>Takeaways</h2>
 			</p>
 			<p>
-			This was my first real project and the launching point for my design path at college. I stumbled upon this opportunity when a friend who knew about my doodling habits recommended me to the EcoReps. I had never created designs before and did not have the software or hardware to so, but thanks to my roommate’s iPad and lots of patience (fingers are quite imprecise), I started drawing my ideas. Overall, I really learned how to push myself and never turn down a project, because in this case it led me to more opportunities that brought me to where I am today.  	
+			I learned the <mark>importance of iteration</mark> while creating these logos - I probably made six or seven versions of each design before we decided on the final ones, and each iteration improved on shortcomings of the previous one. I worked closely with the Office Manager throughout the process, and having her and the staff's feedback also contributed to the direction of the designs. 
 			</p>
 		
 		 
