--- a/projects/sdc.html
+++ b/projects/sdc.html
@@ -47,6 +47,7 @@
 	<div class="proj_nav_content">
 		<div class="proj_nav">
 		<h2>More Branding Projects</h2>
+			<a href="projects/opo.html"><img class="tile_small" src="../assets/OPO.png"></a>
 			<a href="ef.html"><img class="tile_small" src="../assets/projecttile-40.png"></a>
 			<a href="dmc.html"><img class="tile_small" src="../assets/projecttile-29.png"></a>
 			<a href="sdc.html"><img class="tile_small" src="../assets/projecttile-31.png"></a>
