--- a/projects/dmcposter.html
+++ b/projects/dmcposter.html
@@ -32,7 +32,7 @@
 			<img src="../assets/dmcposter.png" style= "height: 56.4%; width:40%;">
 		</div>
 		<p>
-		I created these posters for the Dartmouth Mountaineering Club's 18S Gear order. The club really wanted some posters to <mark>encapsulate the personalitiy and history of Dartmouth mountaineering</mark>, which inspired these first two designs. 
+		I created these posters for the Dartmouth Mountaineering Club's 18S Gear order. The club really wanted some posters to <mark>encapsulate the personality and history of Dartmouth mountaineering</mark>, which inspired these first two designs. 
 		The first poster was inspired by the numerous break trips that the club has during the winter and spring. Each night, we would sit around the campfire retelling the day's adventures and playing the Wine Game, a traditional drinking game that honors "DMCers past and present" and begins with the phrase written on the poster. 
 		</p>
 		<p>
