added gabriel project

--- a/illustration.html
+++ b/illustration.html
@@ -27,6 +27,7 @@
 <div class="container_featuredProjects">
 	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png"></a>
 	<a href="projects/snowwars.html"><img class="tile" src="assets/projecttile-09.png"></a>
+	<a href="projects/gabriel.html"><img class="tile" src="assets/gabriel_draft.jpg"></a>
 	<a href="projects/trips.html"><img class="tile" src="assets/projecttile-11.png"></a>
 	<a href="projects/iceposter.html"><img class="tile" src="assets/projecttile-25.png"></a>
 	<a href="projects/brewhaha.html"><img class="tile" src="assets/projecttile-14.png"></a>
