--- a/projects/dog.html
+++ b/projects/dog.html
@@ -45,6 +45,7 @@
 		<h2>More Illustration Projects</h2>
 			<a href="dmcposter.html"><img class="tile_small" src="../assets/projecttile-08.png"></a>
 			<a href="snowwars.html"><img class="tile_small" src="../assets/projecttile-09.png"></a>
+			<a href="gabriel.html"><img class="tile_small" src="../assets/gabriel_draft.jpg"></a>
 			<a href="trips.html"><img class="tile_small" src="../assets/projecttile-11.png"></a>
 			<a href="iceposter.html"><img class="tile_small" src="../assets/projecttile-25.png"></a>
 			<a href="brewhaha.html"><img class="tile_small" src="../assets/projecttile-14.png"></a>
