--- a/projects/gabriel.html
+++ b/projects/gabriel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Illustration | The Fifty</title>
+	<title>Regina | Illustration | Gabriel album</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,17 +25,22 @@
 <div class="top_padding"></div>	
 	<div class="content">
 	<div class="box_content">
-		<h1>The Fifty Sticker</h1>
+		<h1>Gabriel Album Artwork</h1>
 		<div class="proj_img">
-			<img src="../assets/fifty.png" style= "height:500px; width:500px;">
+			<img src="../assets/gabriel_draft.jpg" style= "width:100%;">
 		</div>
-			<p>
-			Each fall, spring and summer, students embark on the legendary "Fifty", a 53 mile non-stop hike from Dartmouth's Moosilauke Lodge in Warren, NH to Robinson Hall on campus. The journey usually takes 24-36 hours, and many student volunteers set up camp along the way to support the weary hikers. 
-			Upon completion, hikers and supporters of the Fall 2016 Fifty all received this sticker!	
-			</p>
+		<p>
+		A good friend of mine's father, Skip Barthold, is a musician, and I created this cover for his album Gabriel. I worked closely with Skip to develop an idea starting with a mood board-esque series of images that evoqued the sentiment of the album's music. I then created some rough draft sketches before creating the album cover with the horn, which references lines in the song's chorus. 
+		</p>
+		<h2>Drafts</h2>
+		<div class="proj_img">
+<!-- 			<img src="../assets/dmcmock.png" style= "height:385px; width:650px;"> 432, 306 -- 141% 100%-->
+			<img src="../assets/gabriel_1.png" style= "width:40%;">
+			<img src="../assets/gabriel_2.png" style= "width:40%;">
+		</div>
 		 
 	</div>
-	</div>
+</div>
 	<div class="proj_nav_background">
 	<div class="proj_nav_content">
 		<div class="proj_nav">
@@ -62,6 +67,7 @@
 	<footer>
 	&copy; Regina Yan
 	</footer>
+
 
 </body>
 <script type="text/javascript">
