added process screenshots

--- a/projects/digdreams.html
+++ b/projects/digdreams.html
@@ -34,7 +34,7 @@
 	<p> We're in an incredible technological age with mindblowing advancements year after year. What will things look like in 2025? For this project in my Design Thinking class, we worked in teams of three to create a futuristic product that would better the lives of individuals in education, recreation, or parenting.</p>
 	<p> My team chose recreation, and after creating a few mind maps, we decided to create something to <mark>improve experiences with travel.</mark> We then interviewed individuals to find their pain points to inform our direction.</p>
 	<p> A core problem we found was a two-fold situation. Individuals love sharing their experiences with others, but the process of capturing an event can take away from the enjoyment of "being in the moment". On the other hand, people love seeing and reliving the experiences of their friends, but following Snapchat stories can feel impersonal, and it's hard to convey the full experience through just sight and sound.</p>
-	<p>We decided to tackle this problem with a product that would <mark>create a meaningful moment between those two individuals while sharing an experience.</mark> This is what we came up with: </p>
+	<p>We decided to tackle this problem with a product that would <mark>create a meaningful moment between two individuals trying to share an experience.</mark> This is what we came up with: </p>
 	<div class="container_video">
 		<iframe width="640" height="360" src="https://www.youtube.com/embed/hSWupMssqQU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</div>
