--- a/projects/sharity.html
+++ b/projects/sharity.html
@@ -40,6 +40,22 @@
 	<mark>I am working as the designer on this project and currently helping with front-end development in React.</mark> The project is led by a Stamps Scholar who is conducting research in this field. The site is still in basic wireframe mode (Figma link <a href="https://www.figma.com/proto/H3T05DBPtAsvwYczyuk62jDG/Sharity?node-id=2%3A0&scaling=scale-down" class="link">here</a>) and it will start seeing progress in the upcoming year!
 	</p>
 	<p>
+	<h2>User Flow</h2>	
+	</p>
+	<div class="proj_img">
+		<img src="../assets/sharityflow.jpeg" style= "width: 100%;">
+	</div>
+
+	<p>
+	<h2>Grayscales</h2>	
+	</p>
+	<div class="proj_img">
+		<img src="../assets/sharityfigma.png" style= "width: 100%;">
+		<p>Link to Figma prototype <a href="https://www.figma.com/proto/H3T05DBPtAsvwYczyuk62jDG/Sharity?node-id=2%3A0&scaling=scale-down" class="link">here</a></p>
+	</div>
+
+
+	<p>
 	<h2>Sketch Files</h2>	
 	</p>
 
