--- a/about.html
+++ b/about.html
@@ -31,7 +31,12 @@
 	<p>I also don't normally look like I do in that image - I like the photo though, and it's from my <a href="projects/sa.html" class="link">climbing expedition in South Africa.</a> Anyways, outside of having crazy hair days, I am a figure skater, dad joke generator, lover of the outdoors, dedicated journal-er, and aspiring designer!</p>
 	<p>I started designing my freshman year at Dartmouth College, where I am currently a rising senior studying <b>Engineering</b> and <b>Studio Art</b> with a minor in <b>Human-Centered Design</b>. I'm primarily interested in <b>product and UI/UX design</b> and am inspired by solutions that positively impact our community and environment. I am so thankful for all the opportunities I have had and cannot wait for what's down the road.</p>
 	<br>
+	<div class="proj_img">
+		<a href="mailto:Regina.L.Yan.19@dartmouth.edu"><img src="assets/socmed-57.png" class="socialmedia"></a>
+		<a href="http://www.linkedin.com/in/reginayan"><img src="assets/socmed-58.png" class="socialmedia"></a>
 	<br>
+	<br>
+	</div>
 	<div class="container_aboutCourses">
 		<h2>Relevant Courses</h2>
 		<ul>
