added improving dartmouth project

--- a/projects/meta.html
+++ b/projects/meta.html
@@ -68,6 +68,7 @@
 		<h2>More UI/UX Projects</h2>
 		<a href="thedish.html"><img class="tile_small" src="../assets/projecttile-44.png"></a>
 		<a href="nudg.html"><img class="tile_small" src="../assets/projecttile-43.png"></a>
+		<a href="impdart.html"><img class="tile_small" src="../assets/projecttile-60.png"></a>
 		<a href="digdreams.html"><img class="tile_small" src="../assets/projecttile-55.png"></a>
 		<a href="meta.html"><img class="tile_small" src="../assets/projecttile-45.png"></a>
 		<a href="sharity.html"><img class="tile_small" src="../assets/projecttile-41.png"></a>
