--- a/uiux.html
+++ b/uiux.html
@@ -29,6 +29,7 @@
 	<a href="projects/thedish.html"><img class="tile" src="assets/projecttile-44.png"></a>
 	<a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png"></a>
 	<a href="projects/nudg.html"><img class="tile" src="assets/projecttile-43.png"></a>
+	<a href="projects/impdart.html"><img class="tile" src="assets/projecttile-60.png"></a>
 	<a href="projects/digdreams.html"><img class="tile" src="assets/projecttile-55.png"></a>
 	<a href="projects/meta.html"><img class="tile" src="assets/projecttile-45.png"></a>
 	<a href="projects/kaf.html"><img class="tile" src="assets/projecttile-42.png"></a>
