--- a/uiux.html
+++ b/uiux.html
@@ -22,9 +22,9 @@
 		</div>
 	</header>
 	</div>
-	
 
-<div class="top_padding"></div>
+<div style="padding-top: 150px;"></div>
+
 <div class="container_featuredProjects">
 	<a href="projects/thedish.html"><img class="tile" src="assets/projecttile-44.png"></a>
 	<a href="projects/sharity.html"><img class="tile" src="assets/projecttile-41.png"></a>
