--- a/projects/technigala.html
+++ b/projects/technigala.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Illustration | Camp Dartmouth</title>
+	<title>Regina | Illustration | Technigala</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,18 +25,22 @@
 <div class="top_padding"></div>	
 	<div class="content">
 	<div class="box_content">
-		<h1>Camp Dartmouth Shirts</h1>
+		<h1>Technigala 18F</h1>
 		<div class="proj_img">
-			<img src="../assets/18X-02.png" style= "height:300px; width:300px;">
-			<img src="../assets/18X-04.png" style= "height:300px; width:300px;">
-			<img src="../assets/campdartmouth_back.png" style= "height:300px; width:300px;">
+			<img src="../assets/technigala18F.jpg" style= "width: 100%">
 		</div>
 		<p>
-		A common slogan about Dartmouth's "Sophomore Summer" term, where rising juniors stay on campus from June through August and take classes as part of the College's D-Plan, is the iconic "Camp Dartmouth". This summer term is filled with outdoorsy summer vibes and is a special part of the Dartmouth experience. I created this shirt to help my figure skating team generate money for our upcoming competitive year.
+		Technigala is the DALI Lab's termly showcase featuring student projects in tech and design. I was asked to create the poster for 18F (Fall of 2018). Past designs incorporated a robot character, so I continued this trend in an autumn setting and used WALL-E as a color/atmosphere inspiration. The robot represents the DALI student, each glowing blue orb step represents a different week in the term. The steps lead to the futuristic city, which represents the culminating Technigala showcase.
 		</p>
+
+		<h2>Initial Sketches</h2>
+		<div class="proj_img">
+		<img src="../assets/technigaladraft.jpeg" style= "width: 80%">
+		</div>
+
 		 
 	</div>
-	</div>
+</div>
 	<div class="proj_nav_background">
 	<div class="proj_nav_content">
 		<div class="proj_nav">
@@ -64,6 +68,8 @@
 	<footer>
 	&copy; Regina Yan
 	</footer>
+
+
 </body>
 <script type="text/javascript">
 	function clickNav() {
