--- a/illustration.html
+++ b/illustration.html
@@ -25,6 +25,7 @@
 <div style="padding-top: 150px;"></div>
 
 <div class="container_featuredProjects">
+	<a href="projects/technigala.html"><img class="tile" src="assets/projecttile-56.png"></a>
 	<a href="projects/dmcposter.html"><img class="tile" src="assets/projecttile-08.png"></a>
 	<a href="projects/snowwars.html"><img class="tile" src="assets/projecttile-09.png"></a>
 	<a href="projects/gabriel.html"><img class="tile" src="assets/gabriel_draft.jpg"></a>
