--- a/projects/nudg.html
+++ b/projects/nudg.html
@@ -46,7 +46,7 @@
 		<b>User Research</b>	
 		</h2>
 		<p>
-		Initially, our project partner invisioned this app to be geared towards undergrad and graduate students for the purposes of networking. However, during user interviews with our target audience, we found that people were more interested in an app that helped them manage their relationships with people in their everyday lives. <mark>The nature of recruitment and networking didn't actually result in a compelling need for this app. Remember to call your mother each week amidst the flurry of a 10-week term, however, was much more pressing. </mark>
+		Initially, our project partner invisioned this app to be geared towards undergrad and graduate students for the purposes of networking. However, during user interviews with our target audience, we found that people were more interested in an app that helped them manage their relationships with people in their everyday lives. <mark>The nature of recruitment and networking didn't actually result in a compelling need for this app. Remembering to call your mother each week amidst the flurry of a 10-week term, however, was much more pressing. </mark>
 		</p>
 
 		<div class="proj_img">
