--- a/projects/technigala.html
+++ b/projects/technigala.html
@@ -27,7 +27,7 @@
 	<div class="box_content">
 		<h1>Technigala 18F</h1>
 		<div class="proj_img">
-			<img src="../assets/technigala18F.jpg" style= "width: 100%">
+			<img src="../assets/technigala18F-install.jpeg" style= "width: 100%">
 		</div>
 		<p>
 		Technigala is the DALI Lab's termly showcase featuring student projects in tech and design. I was asked to create the poster for 18F (Fall of 2018). Past designs incorporated a robot character, so I continued this trend in an autumn setting and used WALL-E as a color/atmosphere inspiration. The robot represents the DALI student, each glowing blue orb step represents a different week in the term. The steps lead to the futuristic city, which represents the culminating Technigala showcase.
