added adventure book project

--- a/projects/lunarnewyear.html
+++ b/projects/lunarnewyear.html
@@ -42,6 +42,7 @@
 	<div class="proj_nav_content">
 		<div class="proj_nav">
 		<h2>More Illustration Projects</h2>
+			<a href="adventurebook.html"><img class="tile_small" src="../assets/adventure7.png"></a>
 			<a href="technigala.html"><img class="tile_small" src="../assets/projecttile-56.png"></a>
 			<a href="dmcposter.html"><img class="tile_small" src="../assets/projecttile-08.png"></a>
 			<a href="snowwars.html"><img class="tile_small" src="../assets/projecttile-09.png"></a>
