--- a/projects/technigala.html
+++ b/projects/technigala.html
@@ -35,7 +35,8 @@
 
 		<h2>Initial Sketches</h2>
 		<div class="proj_img">
-		<img src="../assets/technigaladraft.jpeg" style= "width: 80%">
+		<img src="../assets/technigaladraft.jpeg" style= "width: 40%">
+		<img src="../assets/technigaladraft2.png" style= "width: 40%">
 		</div>
 
 		 
