update nudg link

--- a/projects/nudg.html
+++ b/projects/nudg.html
@@ -39,7 +39,7 @@
 		Enter Nudg. <mark>Nudg is relationship management app that helps users maintain and build relationships with their friends by sending a "nudg".</mark> The user can create automatic nudgs or manually input reminders, keep track of conversations and write follow-up notes-to-self, and view contacts in a "heat map" configuration which sorts contacts in order of communication frequency. 
 		</p>
 		<p>
-		I worked as a designer on this team during my Junior Spring at the DALI Lab. Because this was Nudg’s first term at DALI, we started from a blank slate and conducted user interviews to understand our target audience’s needs. After some insightful discussions, we created our Feature Spec and Project Proposal. Then onto designing! I worked with the other designer on the team to create wireframes and high-fidelity mockups in Figma, which can be found <a href="https://www.figma.com/proto/U6UWhi4oTIMQShWtoHnaXCkf/Nudg?node-id=318%3A14&scaling=min-zoom" class="link">here.</a>
+		I worked as a designer on this team during my Junior Spring at the DALI Lab. Because this was Nudg’s first term at DALI, we started from a blank slate and conducted user interviews to understand our target audience’s needs. After some insightful discussions, we created our Feature Spec and Project Proposal. Then onto designing! I worked with the other designer on the team to create wireframes and high-fidelity mockups in Figma, which can be found <a href="https://www.figma.com/proto/U6UWhi4oTIMQShWtoHnaXCkf/Nudg?node-id=48%3A1&scaling=scale-down" class="link">here.</a>
 		</p>
 
 		<h2>
@@ -71,7 +71,7 @@
 
 		<div class="proj_img">
 		<img src="../assets/nudgScreen.png" style= "width:80%;">
-		<p>Link to Figma prototype <a href="https://www.figma.com/proto/U6UWhi4oTIMQShWtoHnaXCkf/Nudg?node-id=318%3A14&scaling=min-zoom" class="link">here.</a></p>
+		<p>Link to Figma prototype <a href="https://www.figma.com/proto/U6UWhi4oTIMQShWtoHnaXCkf/Nudg?node-id=48%3A1&scaling=scale-down" class="link">here.</a></p>
 		</div>
 
 		<p>
