--- a/projects/thedish.html
+++ b/projects/thedish.html
@@ -42,7 +42,7 @@
 			WEEK 1: Researching & Need-Finding
 		</p>
 		<p>
-			WEEK 2: Landing PAge & User Buildup
+			WEEK 2: Landing Page & User Buildup
 		</p>
 		<p>
 			WEEK 2-3: Wireframing
