--- a/projects/apologia.html
+++ b/projects/apologia.html
@@ -4,6 +4,7 @@
 	<title>Regina | Illustration | Apologia</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Sunflower:300|Yeseva+One" rel="stylesheet">
+	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
