--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,700|Sunflower:300|Yeseva+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
 </head>
 
 
