--- a/projects/adventurebook.html
+++ b/projects/adventurebook.html
@@ -54,7 +54,7 @@
 		<img src="../assets/adventure7.png" style= "width: 60%">
 		<p>Lake Morey - Whenever anyone asks me where my favorite place on earth is, it's here. I love skating on Lake Morey's frozen 3-mile track  -- I'm on the figure skating team at school and started out pond skating in my backyard in Minnesota, and Lake Morey brings back the child-like happiness of skating outside</p>
 		<img src="../assets/adventure8.png" style= "width: 60%">
-		<p>Jubile - The Moosilauke Ravine Lodge is a memorable place for me, and one especially important night was Jubile, where each "croo" from First-Year Trips came together and celebrated the completion of the orientation program. The three weeks I spent as the "Klymbing Croo" captain and leading a team of five to show nearly 100 first-years the beauty of climbing and the outdoors was easily the best and most rewarding time of my life. </p>
+		<p>Jubile - The Moosilauke Ravine Lodge is a memorable place for me, and one especially important night was Jubile, where each "crooling" and directorate member from First-Year Trips came together and celebrated the completion of the orientation program. The three weeks I spent as the "Klymbing Croo" captain and leading a team of five to show nearly 100 first-years the beauty of climbing and the outdoors was easily the best and most rewarding time of my life. </p>
 		<img src="../assets/book1.jpeg" style= "width: 50%">
 		</div>
 
